# research-eval-protocol

./: .gitignore  LICENSE  README.md  pyproject.toml
dashboard/: README.md  app.py
dashboard/static/: app.js  index.html  style.css
docs/: architecture.md  roadmap.md  why.md
spec/skills/: research-contribution-format.md  research-evaluation-interpret.md
spec/v0.1/: contribution.schema.json  envelope.schema.json  identity.schema.json  link.schema.json  protocol.md
src/research_eval/: __init__.py  __main__.py  epirank.py  models.py  patterns.py  server.py  storage.py  verification.py
tests/: test_smoke.py
